--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "expo": "~53.0.22",
     "expo-status-bar": "~2.2.3",
     "firebase": "12.2.1",
+    "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.6",
-    "react-native-gesture-handler": "~2.24.0",
     "react-native-paper": "4.9.2",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
