--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@expo/metro-runtime": "~5.0.4",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-firebase/app": "^23.3.1",
+    "@react-native-firebase/auth": "^23.3.1",
     "@react-navigation/native": "*",
     "@react-navigation/stack": "*",
     "expo": "~53.0.22",
